Allow for easier rendering in notebooks

--- a/Dispatch optimization.ipynb
+++ b/Dispatch optimization.ipynb
@@ -23,6 +23,10 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import altair as alt\n",
+    "\n",
+    "# Select your appropriate notebook type for rendering Altair figures\n",
+    "alt.renderers.enable('jupyterlab')\n",
+    "# alt.renderers.enable('notebook')\n",
     "alt.data_transformers.enable('default', max_rows=None)\n",
     "\n",
     "from src.read_data import read_all_nyc\n",
